Fixed overflow in footer

--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ p {
 
 .logo-footer {
   margin-top: 2rem;
-  margin-left: 5rem;
 }
 
 .logo-footer b {
@@ -145,7 +144,7 @@ p {
 /* Hero */
 .hero {
   height: 60vh; 
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -263,7 +262,7 @@ p {
 
 main {
   background-color: var(--dark-purple);
-  width: 100vw;
+  width: 100%;
 }
 .movies-h2 {
   margin-top: 0;
@@ -316,7 +315,6 @@ img:hover {
 
 /* Footer */
 footer {
-  width: 100vw;
   height: auto;
   background-color: #000000;
   justify-content: space-between;
@@ -330,6 +328,7 @@ footer {
   padding: 20px;
   gap: 5rem;
   align-items: center;
+  padding: 0;
 }
 
 .footer-nav ul {
